--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,30 +2,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:layout_marginBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/llProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:padding="8dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/ivProfile"
+            android:layout_marginStart="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvUsername"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/open_sans_semibold"
             android:text="TextView"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            tools:text="rahul" />
+            android:textSize="18sp"
+            tools:text="username" />
 
     </LinearLayout>
 
@@ -37,64 +42,87 @@
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ivImage"
+        android:layout_alignEnd="@+id/ivImage"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:background="@drawable/likes_bg">
+
+        <ImageButton
+            android:id="@+id/btnLike"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/heart_icon_stroke"/>
+
+        <TextView
+            android:id="@+id/tvLikesCount"
+            android:layout_width="20dp"
+            android:layout_height="25dp"
+            android:layout_alignTop="@+id/btnLike"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@+id/btnLike"
+            android:fontFamily="@font/open_sans"
+            android:textSize="20dp"
+            tools:text="0" />
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:layout_below="@id/ivImage"
         android:layout_marginBottom="8dp"
-        android:layout_below="@+id/ivImage"
+        android:fontFamily="@font/open_sans"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         tools:text="trying to look hipster" />
-
 
     <TextView
         android:id="@+id/tvCreatedAt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_below="@+id/tvDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:fontFamily="@font/open_sans"
+        android:layout_marginBottom="15dp"
         tools:text="an hour ago" />
-
-    <Button
-        android:id="@+id/btnLike"
-        android:layout_below="@+id/tvCreatedAt"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/ufi_heart_icon"/>
-
-
-    <TextView
-        android:id="@+id/tvLikesCount"
-        android:layout_width="20dp"
-        android:layout_height="30dp"
-        android:layout_alignTop="@+id/btnLike"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_toEndOf="@+id/btnLike"
-        android:textSize="20dp"
-        tools:text="0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComments"
-        android:layout_below="@+id/btnLike"
+        android:layout_below="@+id/tvCreatedAt"
+        android:layout_above="@+id/btnComment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btnComment"
-        android:layout_gravity="bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        tools:text="Comment" />
 
     <EditText
         android:id="@+id/etComment"
-        android:layout_below="@+id/rvComments"
         android:layout_width="250dp"
-        android:layout_alignTop="@+id/btnComment"
+        android:layout_marginStart="10dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rvComments"
+        android:layout_alignTop="@+id/btnComment"
+        android:fontFamily="@font/open_sans"
         android:hint="Write a comment" />
+
+    <Button
+        android:id="@+id/btnComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/blue"
+        android:fontFamily="@font/open_sans_semibold"
+        android:text="Post"
+        android:textAllCaps="false" />
 
 
 </RelativeLayout>
