--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,36 +17,49 @@
 
     <EditText
         android:id="@+id/etUsername"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:background="@drawable/edittextround"
         android:ems="10"
-        android:padding="10dp"
-        android:hint="Username" />
+        android:fontFamily="@font/open_sans"
+        android:hint="Username"
+        android:padding="10dp" />
 
 
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginTop="20dp"
-        android:ems="10"
+        android:layout_weight="1"
         android:background="@drawable/edittextround"
+        android:ems="10"
+        android:fontFamily="@font/open_sans"
         android:hint="Password"
-        android:padding="10dp"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:padding="10dp" />
 
     <Button
         android:id="@+id/btnLogin"
-        android:backgroundTint="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        android:backgroundTint="@color/blue"
         android:text="Log In"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/btnSignup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="@color/green"
+        android:text="Sign Up"
+        android:textAllCaps="false"
+        android:textSize="20dp" />
 
 </LinearLayout>
