--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,43 +9,56 @@
 
     <ImageView
         android:id="@+id/ivProfile"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <Button
-        android:id="@+id/btnUpload"
-        android:layout_toEndOf="@+id/ivProfile"
+    <TextView
+        android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        tools:text="Upload PP" />
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/ivProfile"
+        android:fontFamily="@font/open_sans_semibold"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="18sp"
+        tools:text="username" />
+
+    <Button
+        android:id="@+id/btnUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvUsername"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/ivProfile"
+        android:backgroundTint="@color/blue"
+        android:fontFamily="@font/open_sans_semibold"
+        android:text="Change Picture"
+        android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/btnUpload"
         android:layout_alignTop="@+id/btnUpload"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="12dp"
-        android:text="Logout" />
+        android:layout_toEndOf="@id/btnUpload"
+        android:fontFamily="@font/open_sans_semibold"
+        android:text="Logout"
+        android:textAllCaps="false" />
 
-    <TextView
-        android:id="@+id/tvUsername"
-        android:layout_toEndOf="@+id/ivProfile"
-        android:layout_below="@id/btnUpload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        tools:text="Username" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
         android:layout_below="@+id/ivProfile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvPosts"
