--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,23 +10,28 @@
         android:id="@+id/llProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:padding="8dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/ivProfile"
+            android:layout_marginStart="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvUsername"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/open_sans_semibold"
             android:text="TextView"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            tools:text="rahul" />
+            android:textSize="18sp"
+            tools:text="username" />
 
     </LinearLayout>
 
@@ -37,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:adjustViewBounds="true"
+        android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -44,14 +50,20 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/open_sans"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         tools:text="trying to look hipster" />
 
     <TextView
         android:id="@+id/tvCreatedAt"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="12dp"
+        android:fontFamily="@font/open_sans"
+        android:layout_marginBottom="15dp"
         tools:text="an hour ago" />
 
 </LinearLayout>
