--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1877F2</color>
     <color name="red">#FD1D1D</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="purple">#C13584</color>
+    <color name="green">#5CB85C</color>
+    <color name="gray">#8C8C94</color>
 
 </resources>
